[project]
name = "nisar-manifest-explorer"
version = "0.1.0"
description = "Interactive visualization of NISAR chunk manifests"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = [
    "virtualizarr[hdf]",
    "vzviz @ git+https://github.com/virtual-zarr/vzviz",
    "obspec-utils @ git+https://github.com/developmentseed/obspec-utils",
    "xarray",
    "panel>=1.0",
    "holoviews>=1.18",
    "bokeh>=3.0",
    "colorcet",
    "ujson",
    "matplotlib",
]

[dependency-groups]
dev = [
    "earthaccess",
    "aiohttp",
    "ujson",
]

[tool.codespell]
skip = "data/*"
